--- a/style/index.css
+++ b/style/index.css
@@ -5,7 +5,12 @@
             display: flex;
             flex-direction: column;
             align-items: center;
+            
+            background: url('background6.mp4') no-repeat center center fixed;
+            /* Assurer que la vidéo couvre tout l'écran */
+            background-size: cover;
         }
+        
         .quiz {
             background-color: #00B; 
             color: white;
@@ -62,3 +67,14 @@
         ::-webkit-scrollbar-corner {
             background: none;
         }
+        #background-video {
+            height: 100vh;
+            width: 100vw;
+            object-fit: cover;
+            position: fixed;
+            left: 0;
+            right: 0;
+            top: 0;
+            bottom: 0;
+            z-index: -1;
+            }
