--- a/style/connexion.css
+++ b/style/connexion.css
@@ -11,10 +11,6 @@ body {
     background-size: cover;
 }
 
-h1 {
-    text-align: center;
-    font-size: 56px;
-}
 form {
     padding: 20px;
     background-color: rgba(255,255,255,0.4); 
@@ -25,7 +21,7 @@ form {
     display: flex;
     flex-direction: column;
     align-items: center;
-    height: 25%;
+    height: 200px;
 
 }
 .form-group {
