--- a/style/preview.css
+++ b/style/preview.css
@@ -1,53 +1,3 @@
-@import url(https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600&display=swap);
-body {
-  font-family: "Poppins";
-  width: 100%;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  overflow: hidden;
-  height: 100vh;
-}
-
-.quiz {
-  background-color: #00b;
-  color: white;
-  position: absolute;
-  margin: 0 0 100px;
-  bottom: 0;
-  padding: 15px 20px;
-  border: none;
-  border-radius: 3px;
-  cursor: pointer;
-  transition: background-color 0.3s ease;
-  display: flex;
-  justify-content: center;
-  text-decoration: none;
-}
-.game {
-  margin: 0;
-  padding: 10px 10px;
-}
-
-::-webkit-scrollbar {
-  width: 12px;
-  height: 12px;
-}
-::-webkit-scrollbar-track {
-  background: none;
-}
-::-webkit-scrollbar-thumb {
-  background-color: rgb(61, 61, 61);
-  border-radius: 12px;
-}
-::-webkit-scrollbar-thumb:hover {
-  background-color: rgb(46, 46, 46);
-  border-radius: 12px;
-}
-::-webkit-scrollbar-corner {
-  background: none;
-}
 @import url("https://fonts.googleapis.com/css2?family=Montserrat:wght@500;600;700;800&display=swap");
 :root {
   --card-width: 200px;
@@ -62,16 +12,27 @@ body {
   padding: 0;
 }
 
-#background-video {
+body {
+  width: 100%;
   height: 100vh;
-  width: 100vw;
-  object-fit: cover;
-  position: fixed;
-  left: 0;
-  right: 0;
-  top: 0;
-  bottom: 0;
-  z-index: -1;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  background: rgba(0, 0, 0, 0.787);
+  overflow: hidden;
+}
+input[type="submit"] { 
+    background-color: #ec9593;
+    color: white;
+    position: absolute;
+    left: 50%; 
+    transform: translateX(-50%); 
+    bottom: 150px; 
+    padding: 15px 20px;
+    border: none;
+    border-radius: 7px;
+    cursor: pointer;
+    transition: background-color 0.3s ease;
 }
 button {
   border: none;
