--- a/style/index.css
+++ b/style/index.css
@@ -1,379 +1,191 @@
 @import url(https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600&display=swap);
-body {
-  font-family: "Poppins";
-  width: 100%;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  overflow: hidden;
-  height: 100vh;
-}
+        body {
+            font-family: Arial, sans-serif;
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+            justify-content: space-around;
+            height: 100%;
+            width:100%;
+            color: #000000; 
+            backdrop-filter: blur(10px);
+            overflow-x: hidden;
+        }
+        h1 {
+            text-align: center;
+            font-size: 56px;
+            margin: 16px 0;
 
-.quiz {
-  background-color: #00b;
-  color: white;
-  position: absolute;
-  margin: 0 0 100px;
-  bottom: 0;
-  padding: 15px 20px;
-  border: none;
-  border-radius: 3px;
-  cursor: pointer;
-  transition: background-color 0.3s ease;
-  display: flex;
-  justify-content: center;
-  text-decoration: none;
-}
-.game {
-  margin: 0;
-  padding: 10px 10px;
-}
+        }
+        form {
+            padding: 20px;
+            background-color: rgba(255,255,255,0.4); 
+            border-radius: 20px;
+            box-shadow: 0 2px 5px rgba(0, 0, 0, 0.4);
+            margin-bottom: 20px;
+            width: 35%;
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+            height: 25%;
 
-::-webkit-scrollbar {
-  width: 12px;
-  height: 12px;
-}
-::-webkit-scrollbar-track {
-  background: none;
-}
-::-webkit-scrollbar-thumb {
-  background-color: rgb(61, 61, 61);
-  border-radius: 12px;
-}
-::-webkit-scrollbar-thumb:hover {
-  background-color: rgb(46, 46, 46);
-  border-radius: 12px;
-}
-::-webkit-scrollbar-corner {
-  background: none;
-}
-@import url("https://fonts.googleapis.com/css2?family=Montserrat:wght@500;600;700;800&display=swap");
-:root {
-  --card-width: 200px;
-  --card-height: 300px;
-  --card-transition-duration: 800ms;
-  --card-transition-easing: ease;
-}
+        }
+        .form-group {
+            margin: 20px 0;
+            display: flex;
+            flex-direction: column;
+            align-items: flex-start;
+        }
 
-* {
-  box-sizing: border-box;
-  margin: 0;
-  padding: 0;
-}
+        .label-input {
+            display: flex;
+            flex-direction: row;
+            align-items: center;
+
+        }
+
+        option{
+            width: 300px;
+        }
+        label {
+            display: block;
+            font-size: 20px;
+            font-weight: 600;
+            width: 300px; 
+        }
+        input[type="text"],
+        input[type="email"],
+        input[type="password"], 
+        select{
+            padding: 10px;
+            border: 1px solid #ccc;
+            border-radius: 13px;
+            width: 100%;
+        }
+        input[type="submit"], .inscription {
+            background-color: #EC9593;
+            color: white;
+            padding: 15px 20px;
+            border: none;
+            border-radius: 13px;
+            cursor: pointer;
+            transition: background-color 0.3s ease;
+            display: flex;
+            justify-content: center;
+            text-decoration: none;
+        }
+        input[type="submit"]:hover {
+            background-color: #adbce6;
+
+        }
+        .switch-page{
+            margin-bottom: 50px;
+        }
+        .g-recaptcha{
+            margin: 20px 0;
+        }
+        ::-webkit-scrollbar{
+            width: 12px;
+            height: 12px;
+        }
+
+        ::-webkit-scrollbar-track{
+            background: none;
+        }
+
+        ::-webkit-scrollbar-thumb{
+            background-color: #DCDCDC;
+            border-radius: 12px;
+        }
+
+        ::-webkit-scrollbar-thumb:hover{
+            background-color: #C0C0C0;
+            border-radius: 12px;
+        }
+
+        ::-webkit-scrollbar-corner{
+            background: none;
+
+        }
+        @keyframes typing {
+            from { width: 0 }
+            to { width: 100% }
+        }
+        @keyframes bounce {
+    0%, 20%, 50%, 80%, 100% {
+        transform: translateY(0); /* Début et fin de l'animation : pas de déplacement vertical */
+    }
+    40% {
+        transform: translateY(-30px); /* Déplacement vers le haut */
+    }
+    60% {
+        transform: translateY(-15px); /* Rebond en bas */
+    } }
+/* Style pour le titre h1 */
+    /* Style pour le titre h1 */
+    h1 {
+        color: white;
+        text-align: center;
+        font-size: 56px;
+        overflow: hidden; /* Cela assure que le texte reste dans la boîte délimitée */
+        white-space: nowrap; /* Empêche le saut de ligne */
+        animation: typing 8s steps(10000) forwards; /* Animation de saisie de texte */
+    }
+    h2 {
+        color: white;
+        animation-name: bounce; /* Nom de l'animation */
+        animation-duration: 2s; /* Durée de l'animation */
+        animation-iteration-count: infinite; /* Répétition infinie de l'animation */
+    }
 
 #background-video {
-  height: 100vh;
-  width: 100vw;
-  object-fit: cover;
-  position: fixed;
-  left: 0;
-  right: 0;
-  top: 0;
-  bottom: 0;
-  z-index: -1;
-}
-button {
-  border: none;
-  background: none;
-  cursor: pointer;
-}
-button:focus {
-  outline: none;
-  border: none;
+height: 100%;
+width: 100%;
+object-fit: cover;
+position: fixed;
+left: 0;
+right: 0;
+top: 0;
+bottom: 0;
+z-index: -1;
 }
 
-.app {
-  position: relative;
-  width: 100%;
-  height: 100%;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-}
-.app__bg {
-  position: absolute;
-  width: 100%;
-  height: 100%;
-  z-index: -5;
-  filter: blur(8px);
-  pointer-events: none;
-  user-select: none;
-  overflow: hidden;
-}
-.app__bg::before {
-  content: "";
-  position: absolute;
-  left: 0;
-  top: 0;
-  width: 100%;
-  height: 100%;
-  background: #000;
-  z-index: 1;
-  opacity: 0.8;
-}
-.app__bg__image {
-  position: absolute;
-  left: 50%;
-  top: 50%;
-  transform: translate(-50%, -50%) translateX(var(--image-translate-offset, 0));
-  width: 180%;
-  height: 180%;
-  transition: transform 1000ms ease, opacity 1000ms ease;
-  overflow: hidden;
-}
-.app__bg__image img {
-  width: 100%;
-  height: 100%;
-  object-fit: cover;
-}
-.app__bg__image.current--image {
-  opacity: 1;
-  --image-translate-offset: 0;
-}
-.app__bg__image.previous--image,
-.app__bg__image.next--image {
-  opacity: 0;
-}
-.app__bg__image.previous--image {
-  --image-translate-offset: -25%;
-}
-.app__bg__image.next--image {
-  --image-translate-offset: 25%;
+@import url(https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600&display=swap);
+
+body {
+    font-family: 'Poppins', Arial, sans-serif;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: space-around;
+    min-height: 100vh; /* Utilisation de la hauteur minimale de la vue pour remplacer la hauteur fixe */
+    width: 100%;
+    color: #000000;
+    backdrop-filter: blur(10px);
+    overflow-x: hidden;
 }
 
-.cardList {
-  position: absolute;
-  width: calc(3 * var(--card-width));
-  height: auto;
-}
-.cardList__btn {
-  --btn-size: 35px;
-  width: var(--btn-size);
-  height: var(--btn-size);
-  position: absolute;
-  top: 50%;
-  transform: translateY(-50%);
-  z-index: 100;
-}
-.cardList__btn.btn--left {
-  left: -5%;
-}
-.cardList__btn.btn--right {
-  right: -5%;
-}
-.cardList__btn .icon {
-  width: 100%;
-  height: 100%;
-}
-.cardList__btn .icon svg {
-  width: 100%;
-  height: 100%;
-}
-.cardList .cards__wrapper {
-  position: relative;
-  width: 100%;
-  height: 100%;
-  perspective: 1000px;
+h1 {
+    text-align: center;
+    font-size: 4vw; /* Utilisation de la taille de la police en pourcentage de la largeur de l'écran */
+    margin: 2vw 0; /* Utilisation de marges en pourcentage */
 }
 
-.card {
-  --card-translateY-offset: 100vh;
-  position: absolute;
-  left: 50%;
-  top: 50%;
-  transform: translate(-50%, -50%) translateX(var(--card-translateX-offset))
-    translateY(var(--card-translateY-offset))
-    rotateY(var(--card-rotation-offset)) scale(var(--card-scale-offset));
-  display: inline-block;
-  width: var(--card-width);
-  height: var(--card-height);
-  transition: transform var(--card-transition-duration)
-    var(--card-transition-easing);
-  user-select: none;
-}
-.card::before {
-  content: "";
-  position: absolute;
-  left: 0;
-  top: 0;
-  width: 100%;
-  height: 100%;
-  background: #000;
-  z-index: 1;
-  transition: opacity var(--card-transition-duration)
-    var(--card-transition-easing);
-  opacity: calc(1 - var(--opacity));
-}
-.card__image {
-  position: relative;
-  width: 100%;
-  height: 100%;
-}
-.card__image img {
-  position: absolute;
-  left: 0;
-  top: 0;
-  width: 100%;
-  height: 100%;
-  object-fit: cover;
-}
-.card.current--card {
-  --current-card-rotation-offset: 0;
-  --card-translateX-offset: 0;
-  --card-rotation-offset: var(--current-card-rotation-offset);
-  --card-scale-offset: 1.2;
-  --opacity: 0.8;
-}
-.card.previous--card {
-  --card-translateX-offset: calc(-1 * var(--card-width) * 1.1);
-  --card-rotation-offset: 25deg;
-}
-.card.next--card {
-  --card-translateX-offset: calc(var(--card-width) * 1.1);
-  --card-rotation-offset: -25deg;
-}
-.card.previous--card,
-.card.next--card {
-  --card-scale-offset: 0.9;
-  --opacity: 0.4;
+form {
+    padding: 4vw; /* Utilisation de rem pour le rembourrage */
+    background-color: rgba(255, 255, 255, 0.4);
+    border-radius: 4vw; /* Utilisation de rem pour le rayon du bord */
+    box-shadow: 0 2vw 5vw rgba(0, 0, 0, 0.4); /* Utilisation de rem pour l'ombre */
+    margin-bottom: 4vw; /* Utilisation de marges en pourcentage */
+    width: 80%; /* Utilisation de pourcentage pour la largeur */
+    max-width: 600px; /* Utilisation de max-width pour limiter la largeur */
 }
 
-.infoList {
-  position: absolute;
-  width: calc(3 * var(--card-width));
-  height: var(--card-height);
-  pointer-events: none;
-}
-.infoList .info__wrapper {
-  position: relative;
-  width: 100%;
-  height: 100%;
-  display: flex;
-  justify-content: flex-start;
-  align-items: flex-end;
-  perspective: 1000px;
-  transform-style: preserve-3d;
+/* Ajout d'une règle pour les petits écrans */
+@media screen and (max-width: 768px) {
+    form {
+        width: 90%; /* Ajustement de la largeur pour les petits écrans */
+    }
 }
 
-.info {
-  margin-bottom: calc(var(--card-height) / 8);
-  margin-left: calc(var(--card-width) / 1.5);
-  transform: translateZ(2rem);
-  transition: transform var(--card-transition-duration)
-    var(--card-transition-easing);
-}
-.info .text {
-  position: relative;
-  font-family: "Montserrat";
-  font-size: calc(var(--card-width) * var(--text-size-offset, 0.2));
-  white-space: nowrap;
-  color: #fff;
-  width: fit-content;
-}
-.info .name,
-.info .location {
-  text-transform: uppercase;
-}
-.info .location {
-  font-weight: 800;
-}
-.info .location {
-  --mg-left: 40px;
-  --text-size-offset: 0.12;
-  font-weight: 600;
-  margin-left: var(--mg-left);
-  margin-bottom: calc(var(--mg-left) / 2);
-  padding-bottom: 0.8rem;
-}
-.info .location::before,
-.info .location::after {
-  content: "";
-  position: absolute;
-  background: #fff;
-  left: 0%;
-  transform: translate(calc(-1 * var(--mg-left)), -50%);
-}
-.info .location::before {
-  top: 50%;
-  width: 20px;
-  height: 5px;
-}
-.info .location::after {
-  bottom: 0;
-  width: 60px;
-  height: 2px;
-}
-.info .description {
-  --text-size-offset: 0.065;
-  font-weight: 500;
-}
-.info.current--info {
-  opacity: 1;
-  display: block;
-}
-.info.previous--info,
-.info.next--info {
-  opacity: 0;
-  display: none;
-}
-
-.loading__wrapper {
-  position: fixed;
-  left: 0;
-  top: 0;
-  width: 100%;
-  height: 100%;
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
-  background: #000;
-  z-index: 200;
-}
-.loading__wrapper .loader--text {
-  color: #fff;
-  font-family: "Montserrat";
-  font-weight: 500;
-  margin-bottom: 1.4rem;
-}
-.loading__wrapper .loader {
-  position: relative;
-  width: 200px;
-  height: 2px;
-  background: rgba(255, 255, 255, 0.25);
-}
-.loading__wrapper .loader span {
-  position: absolute;
-  left: 0;
-  top: 0;
-  width: 100%;
-  height: 100%;
-  background: red;
-  transform: scaleX(0);
-  transform-origin: left;
-}
-
-@media only screen and (min-width: 800px) {
-  :root {
-    --card-width: 250px;
-    --card-height: 400px;
-  }
-}
-.support {
-  position: absolute;
-  right: 10px;
-  bottom: 10px;
-  padding: 10px;
-  display: flex;
-}
-.support a {
-  margin: 0 10px;
-  color: #fff;
-  font-size: 1.8rem;
-  backface-visibility: hidden;
-  transition: all 150ms ease;
-}
-.support a:hover {
-  transform: scale(1.1);
-}
+/* Autres styles... */
