--- a/style/game.css
+++ b/style/game.css
@@ -13,3 +13,22 @@
     display: block;
     margin-bottom: 10px;
 }
+input[type="submit"], .exit {
+    background-color: #4caf50;
+    color: #fff;
+    padding: 10px 15px;
+    border: none;
+    border-radius: 4px;
+    cursor: pointer;
+    display: flex;
+    justify-content: space-evenly;
+}
+.exit {
+    width: 65px;
+}
+a{
+    text-decoration: none;
+}
+input[type="submit"]:hover, .exit:hover {
+    background-color: #45a049;
+}
