--- a/style/index.css
+++ b/style/index.css
@@ -20,82 +20,6 @@ h1 {
 
 }
 
-form {
-    padding: 20px;
-    background-color: rgba(255, 255, 255, 0.4);
-    border-radius: 20px;
-    box-shadow: 0 2px 5px rgba(0, 0, 0, 0.4);
-    margin-bottom: 20px;
-    width: 35%;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    height: 25%;
-
-}
-
-.form-group {
-    margin: 20px 0;
-    display: flex;
-    flex-direction: column;
-    align-items: flex-start;
-}
-
-.label-input {
-    display: flex;
-    flex-direction: row;
-    align-items: center;
-
-}
-
-option {
-    width: 300px;
-}
-
-label {
-    display: block;
-    font-size: 20px;
-    font-weight: 600;
-    width: 300px;
-}
-
-input[type="text"],
-input[type="email"],
-input[type="password"],
-select {
-    padding: 10px;
-    border: 1px solid #ccc;
-    border-radius: 13px;
-    width: 100%;
-}
-
-input[type="submit"],
-.inscription {
-    background-color: #EC9593;
-    color: white;
-    padding: 15px 20px;
-    border: none;
-    border-radius: 13px;
-    cursor: pointer;
-    transition: background-color 0.3s ease;
-    display: flex;
-    justify-content: center;
-    text-decoration: none;
-}
-
-input[type="submit"]:hover {
-    background-color: #adbce6;
-
-}
-
-.switch-page {
-    margin-bottom: 50px;
-}
-
-.g-recaptcha {
-    margin: 20px 0;
-}
-
 ::-webkit-scrollbar {
     width: 12px;
     height: 12px;
@@ -161,13 +85,170 @@ h2 {
 }
 
 #background-video {
-    height: 100%;
     width: 100%;
+    height: 100%;
     object-fit: cover;
     position: fixed;
     left: 0;
     right: 0;
-    top: 0;
     bottom: 0;
     z-index: -1;
+
+}
+
+.container{
+    margin: 0 0 250px;
+    transform: translate(0, 100px);
+    height: 800px;
+    background: #f5f5f5;
+    display: flex;
+    justify-content: center;
+    z-index: 0;
+}
+
+.container .slide .item{
+    width: 200px;
+    height: 325px;
+    position: absolute;
+    top: 65%;
+    transform: translate(0, -50%);
+    border-radius: 20px;
+    box-shadow: 0 30px 50px rgba(0, 0, 0, 0.4);
+    background-position: 50% 50%;
+    background-size: cover;
+    display: inline-block;
+    transition: 0.5s;
+}
+
+.slide .item:nth-child(1),
+.slide .item:nth-child(2){
+    top: 0;
+    left: 0;
+    transform: translate(0, 0);
+    border-radius: 0;
+    width: 100%;
+    height: 100%;
+}
+
+
+.slide .item:nth-child(3){
+    left: 50%;
+}
+.slide .item:nth-child(4){
+    left: calc(50% + 220px);
+}
+.slide .item:nth-child(5){
+    left: calc(50% + 440px);
+}
+
+/* here n = 0, 1, 2, 3,... */
+.slide .item:nth-child(n + 6){
+    left: calc(50% + 660px);
+    opacity: 0;
+}
+
+.item .content{
+    position: absolute;
+    top: 70%;
+    left: 100px;
+    width: 300px;
+    text-align: left;
+    color: #eeeeee;
+    transform: translate(0, -50%);
+    font-family: system-ui;
+    display: none;
+}
+
+
+.slide .item:nth-child(2) .content{
+    display: block;
+}
+
+.content{
+    width: 100%;
+    display: flex;
+    align-items: center;
+    box-shadow: inset 0 0 200px 10px rgba(0, 0, 0, 0.5);
+    border-radius: 15px;
+    padding: 20px;
+}
+
+
+.content .name{
+    text-align: center;
+    font-size: 40px;
+    text-transform: uppercase;
+    font-weight: bold;
+    opacity: 0;
+    animation: animate 1s ease-in-out 1 forwards;
+}
+
+.content .des{
+    text-align: center;
+    margin-top: 10px;
+    margin-bottom: 20px;
+    opacity: 0;
+    animation: animate 1s ease-in-out 0.3s 1 forwards;
+    padding: 0 25px 0 0;
+}
+
+.content button{
+    padding: 10px 20px;
+    border: none;
+    cursor: pointer;
+    opacity: 0;
+    animation: animate 1s ease-in-out 0.6s 1 forwards;
+}
+
+
+@keyframes animate {
+    from{
+        opacity: 0;
+        transform: translate(0, 100px);
+        filter: blur(33px);
+    }
+
+    to{
+        opacity: 1;
+        transform: translate(0);
+        filter: blur(0);
+    }
+}
+
+.game{
+    align-self: center;
+    border-radius: 20px;
+    color: #000;
+    background-color: #fff;
+    transition: 0.3s;
+}
+
+.game:hover{
+    color: #fff;
+    background-color: #000;
+    transition: 0.3s;
+}
+
+.button{
+    width: 100%;
+    text-align: center;
+    position: absolute;
+    bottom: 20px;
+}
+
+.button button{
+    width: 40px;
+    height: 35px;
+    border-radius: 8px;
+    border: none;
+    cursor: pointer;
+    margin: 0 5px;
+    border: 1px solid #000;
+    transition: 0.3s;
+}
+
+.button button:hover{
+    background: #000;
+    color: #fff;
+    transition: 0.3s;
 }
