--- a/style/header.css
+++ b/style/header.css
@@ -14,10 +14,10 @@ body.dark{
 }
 nav {
     overflow: hidden;
-    background-color: rbga(255,255,255, 0.6);
     backdrop-filter: blur(10px);
     position: sticky;
     top: 0;
+    z-index: 2;
     width: 100%;
     padding: 25px 0;
     display: flex;
