--- a/style/game.css
+++ b/style/game.css
@@ -14,6 +14,7 @@
     margin-bottom: 10px;
 }
 input[type="submit"], .exit {
+    height: 100%;
     background-color: #4caf50;
     color: #fff;
     padding: 10px 15px;
@@ -22,6 +23,7 @@ input[type="submit"], .exit {
     cursor: pointer;
     display: flex;
     justify-content: space-evenly;
+    align-items: center;
 }
 .exit {
     width: 65px;
@@ -31,4 +33,18 @@ a{
 }
 input[type="submit"]:hover, .exit:hover {
     background-color: #45a049;
+}
+.arrow{
+    padding-bottom: 2px;
+}
+#background-video {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+    position: fixed;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    z-index: -1;
+
 }
