--- a/style/index.css
+++ b/style/index.css
@@ -55,9 +55,10 @@ body {
 h1 {
     color: white;
     text-align: center;
-    margin: 10px 0 0 16px;
     overflow: hidden;
     white-space: nowrap;
+    margin: 0;
+    padding: 0 10px 0;
 }
 
 h2 {
@@ -234,6 +235,7 @@ h2 {
     color: #fff;
     transition: 0.3s;
 }
+
 * {
     margin: 0;
     padding: 0;
@@ -241,6 +243,7 @@ h2 {
     box-sizing: border-box;
     font-family: sans-serif;
 }
+
 @media print {
  .table, .table__body {
   overflow: visible;
@@ -248,11 +251,6 @@ h2 {
   width: auto !important;
  }
 }
-
-/*@page {
-    size: landscape;
-    margin: 0; 
-} */
 
 body {
     min-height: 100vh;
@@ -264,36 +262,34 @@ body {
 
 main.table {
     width: 82vw;
+    height: 400px;
     background-color: #fff5;
-
     backdrop-filter: blur(7px);
     box-shadow: 0 .4rem .8rem #0005;
     border-radius: .8rem;
-
     overflow: hidden;
 }
 
 .table__header {
-    width: 100%;
-    height: 10%;
+    width: 97.5%;
+    height: 12%;
     background-color: #fff4;
-    padding: .8rem 1rem;
-
+    padding: .8rem .5rem;
+    margin: .8rem 1rem;
     display: flex;
     justify-content: space-between;
     align-items: center;
+    border-radius: 1rem;
 }
 
 .table__header .input-group {
-    width: 35%;
-    height: 100%;
+    width: 30%;
     background-color: #fff5;
-    padding: 10px .8rem;
+    padding: 0 .8rem;
     border-radius: 2rem;
     display: flex;
     justify-content: space-between;
     align-items: center;
-
     transition: .2s;
 }
 
@@ -303,6 +299,10 @@ main.table {
     box-shadow: 0 .1rem .4rem #0002;
 }
 
+.table__header .input-group i {
+    background-color: transparent;
+}
+
 .table__header .input-group input {
     padding: 0 .5rem 0 .3rem;
     background-color: transparent;
@@ -310,12 +310,8 @@ main.table {
     outline: none;
 }
 
-.table__header .input-group i {
-    background-color: transparent;
-}
-
 .table__body {
-    width: 95%;
+    width: 97.5%;
     max-height: calc(89% - 1.6rem);
     background-color: #fffb;
 
@@ -347,6 +343,15 @@ table {
     width: 100%;
 }
 
+td i {
+    width: 36px;
+    height: 36px;
+    margin-right: .5rem;
+    border-radius: 50%;
+
+    vertical-align: middle;
+}
+
 table, th, td {
     border-collapse: collapse;
     padding: 1rem;
@@ -359,7 +364,6 @@ thead th {
     left: 0;
     background-color: #d5d1defe;
     cursor: pointer;
-    text-transform: capitalize;
 }
 
 tbody tr:nth-child(even) {
@@ -381,7 +385,8 @@ tbody tr:hover {
 }
 
 tbody tr td,
-tbody tr td p{
+tbody tr td p,
+tbody tr td i {
     transition: .2s ease-in-out;
 }
 
@@ -389,6 +394,12 @@ tbody tr.hide td,
 tbody tr.hide td p {
     padding: 0;
     font: 0 / 0 sans-serif;
+    transition: .2s ease-in-out .5s;
+}
+
+tbody tr.hide td i {
+    width: 0;
+    height: 0;
     transition: .2s ease-in-out .5s;
 }
 
@@ -421,5 +432,23 @@ tbody tr.hide td p {
     td:not(:first-of-type) {
         min-width: 12.1rem;
     }
+}
+
+thead th span.icon-arrow {
+    display: inline-block;
+    width: 1.3rem;
+    height: 1.3rem;
+    border-radius: 50%;
+    border: 1.4px solid transparent;
+    
+    text-align: center;
+    font-size: 1rem;
+    
+    margin-left: .5rem;
+    transition: .2s ease-in-out;
+}
+
+thead th.asc span.icon-arrow{
+    transform: rotate(180deg);
 }
 
