--- a/style/quiz.css
+++ b/style/quiz.css
@@ -159,8 +159,16 @@ button:hover {
 .select-image {
 	display: flex;
     align-items: center;
-
 }
-.select-image:hover {
-	background: var(--dark-blue);
+
+#background-video {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+    position: fixed;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    z-index: -1;
+
 }
