--- a/style/quiz.css
+++ b/style/quiz.css
@@ -11,23 +11,28 @@ body {
     width:100%;
 }
 h1 {
-    color: #333;
+    color: #8365be;
     text-align:center;
 }
 form, .form {
     max-width: 600px;
     margin: 20px auto;
-    padding: 20px;
+    padding: 50px;
     background-color: #fff;
     border-radius: 8px;
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.4);
 }
-form{
+form, .form{
     margin: 50px auto;
+    backdrop-filter: blur(9px);
+    -webkit-backdrop-filter: blur(9px);
+    background-color: rgba(255, 255, 255, 0.308); /* Ajout d'un fond semi-transparent */
 }
 label {
     display: block;
     margin-bottom: 5px;
+    color: #111;
+    font-weight: bold;
 }
 input[type="text"],
 input[type="number"],
@@ -38,6 +43,9 @@ select {
     box-sizing: border-box;
     border: 1px solid #ccc;
     border-radius: 4px;
+    backdrop-filter: blur(9px);
+    -webkit-backdrop-filter: blur(9px);
+    background-color: rgba(255, 255, 255, 0.308); /* Ajout d'un fond semi-transparent */
 }
 input[type="number"]::-webkit-inner-spin-button,
 input[type="number"]::-webkit-outer-spin-button {
@@ -55,6 +63,9 @@ input[type="number"]::-webkit-outer-spin-button {
   overflow-y: auto;
   word-wrap: break-word;
   resize: none;
+  backdrop-filter: blur(9px);
+  -webkit-backdrop-filter: blur(9px);
+  background-color: rgba(255, 255, 255, 0.308); /* Ajout d'un fond semi-transparent */
 }
 .exit{
     display: flex;
@@ -63,7 +74,7 @@ input[type="number"]::-webkit-outer-spin-button {
     gap: 5px;
 }
 button, .exit {
-    background-color: #4caf50;
+    background-color: #8365be;
     color: #fff;
     padding: 10px 15px;
     border: none;
@@ -74,7 +85,7 @@ a{
     text-decoration: none;
 }
 button:hover {
-    background-color: #45a049;
+    background-color: rgba(255, 255, 255, 0.308); 
 }
 
 .container-answer {
@@ -88,7 +99,7 @@ button:hover {
 .container-img {
 	max-width: 400px;
 	width: 100%;
-	background: #fff;
+    background-color: rgba(255, 255, 255, 0.308); 
 	padding: 30px;
 	border-radius: 30px;
     border: 1px solid black;
@@ -171,4 +182,32 @@ button:hover {
     bottom: 0;
     z-index: -1;
 
+}
+.btn{
+    background-color: #8365be;
+    color: #fff;
+    padding: 10px 15px;
+    border: none;
+    border-radius: 4px;
+    cursor: pointer;
+    text-align: center;
+}
+.timer-inputs {
+    display: flex;
+    align-items: center;
+    gap: 10px; /* Espacement entre les éléments */
+}
+.timer-inputs label,
+.timer-inputs input {
+    margin-bottom: 0; /* Supprimer le margin-bottom */
+}
+.btn1 {
+    background-color: #8365be;
+    color: #fff;
+    padding: 10px 15px;
+    border: none;
+    border-radius: 4px;
+    cursor: pointer;
+    text-align: center;
+    margin-top: 30px;
 }
