style: add quiz button

--- a/style/index.css
+++ b/style/index.css
@@ -37,21 +37,6 @@ body {
 
 }
 
-@keyframes bounce {
-    0%,
-    20%,
-    50%,
-    80%,
-    100% {
-        transform: translateY(0);
-    }
-    40% {
-        transform: translateY(-30px);
-    }
-    60% {
-        transform: translateY(-15px);
-    }
-}
 h1 {
     color: white;
     text-align: center;
@@ -63,7 +48,6 @@ h1 {
 
 h2 {
     color: white;
-    animation-name: bounce;
     animation-duration: 2s;
     animation-iteration-count: infinite;
 }
@@ -261,6 +245,7 @@ body {
 }
 
 main.table {
+    margin: 40px 0;
     width: 82vw;
     height: 400px;
     background-color: #fff5;
@@ -452,3 +437,27 @@ thead th.asc span.icon-arrow{
     transform: rotate(180deg);
 }
 
+.btnbtn{
+    margin: 50px 0;
+    display: flex;
+    align-items: center;
+}
+
+.btnbtn h2{
+    font-family: 'Poppins';
+    background: none;
+    margin-right: 20px;
+}
+.btnbtn, #btn {
+    color: #fff;
+    font-weight: 600;
+    text-decoration: none;
+    padding: 12px 20px;
+    cursor: pointer;
+    border-radius: 3px;
+    font-size: 20px;
+    border: 2px solid transparent;
+}
+#btn {
+    background: #8C73B4;
+}
