--- a/style/index.css
+++ b/style/index.css
@@ -38,12 +38,14 @@ body {
 }
 
 h1 {
+    background-color: #0000002d;
+    border-radius: 1rem;
     color: white;
     text-align: center;
     overflow: hidden;
     white-space: nowrap;
     margin: 0;
-    padding: 0 10px 0;
+    padding: 0 25px;
 }
 
 h2 {
@@ -259,7 +261,7 @@ main.table {
     width: 97.5%;
     height: 12%;
     background-color: #fff4;
-    padding: .8rem .5rem;
+    padding: 0rem .5rem 0rem 0;
     margin: .8rem 1rem;
     display: flex;
     justify-content: space-between;
@@ -389,7 +391,7 @@ tbody tr.hide td i {
 }
 
 .status {
-    padding: .4rem 0;
+    padding: .4rem;
     border-radius: 2rem;
     text-align: center;
 }
@@ -460,4 +462,39 @@ thead th.asc span.icon-arrow{
 }
 #btn {
     background: #8C73B4;
+}
+
+input[type="submit"]{
+    font-family: 'Poppins';
+    background: #8C73B4;
+    color: #fff;
+    font-weight: 600;
+    text-decoration: none;
+    padding: 2px 10px;
+    cursor: pointer;
+    border-radius: 3px;
+    font-size: 16px;
+    border: 2px solid transparent;
+    width: 100%;
+}
+p{
+    margin-bottom: 0;
+}
+
+.exit{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    gap: 5px;
+}
+.exit {
+    background-color: #8365be;
+    color: #fff;
+    padding: 10px 15px;
+    border: none;
+    border-radius: 4px;
+    cursor: pointer;
+}
+a{
+    text-decoration: none;
 }
