--- a/style/index.css
+++ b/style/index.css
@@ -389,9 +389,10 @@ tbody tr.hide td i {
 }
 
 .status {
-    padding: .4rem 0;
+    padding: 8px 0;
     border-radius: 2rem;
     text-align: center;
+    margin-top: 18px;
 }
 
 .status.delivered {
@@ -460,4 +461,16 @@ thead th.asc span.icon-arrow{
 }
 #btn {
     background: #8C73B4;
+}
+input {
+    background: #8C73B4;
+    color: #fff;
+    font-weight: 600;
+    border: none;
+    padding: 12px 20px;
+    cursor: pointer;
+    border-radius: 3px;
+    font-size: 16px;
+    border: 2px solid transparent;
+   display: flex;
 }
